--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-@font-face { font-family: Quicksand; src: url('fonts/Quicksand_Light.otf'); } 
+@font-face { font-family: Quicksand; font-weight: light; src: url('fonts/Quicksand_Light.otf'); } 
+@font-face { font-family: Quicksand; src: url('fonts/Quicksand_Book.otf'); } 
+
+
+
 
 * {
  font-family: Quicksand;
