--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@font-face { font-family: Quicksand; font-weight: light; src: url('fonts/Quicksand_Light.otf'); } 
-@font-face { font-family: Quicksand; font-weight: bold; src: url('fonts/Quicksand_Bold.otf'); }
-@font-face { font-family: Quicksand; src: url('fonts/Quicksand_Book.otf'); } 
+@font-face { font-family: Quicksand; font-weight: light; src: url('fonts/quicksand/Quicksand_Light.otf'); } 
+@font-face { font-family: Quicksand; font-weight: bold; src: url('fonts/quicksand/Quicksand_Bold.otf'); }
+@font-face { font-family: Quicksand; src: url('fonts/quicksand/Quicksand_Book.otf'); } 
 
 * {
  font-family: Quicksand;
