--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ h3 {
     background: black;
   }
 
+  a {
+    text-decoration: none;
+  }
+
   a:link {
     color: #5bf;
   }
@@ -37,5 +41,8 @@ h3 {
   display: inline-block;
 }
 
-
+#footer {
+  text-align: center;
+  font-size: 80%;
+}
 
