--- a/style.css
+++ b/style.css
@@ -18,10 +18,6 @@ h3 {
     background: black;
   }
 
-  a {
-    text-decoration: none;
-  }
-
   a:link {
     color: #5bf;
   }
@@ -34,6 +30,7 @@ h3 {
 .socials {
   text-align: center;
   font-size: 80%;
+  padding: 0;
 }
 
 .socials li {
@@ -41,7 +38,11 @@ h3 {
   display: inline-block;
 }
 
-#footer {
+.socials a {
+    text-decoration: none;
+}
+
+.footer {
   text-align: center;
   font-size: 80%;
 }
