--- a/assets/main.css
+++ b/assets/main.css
@@ -15,7 +15,7 @@ h3 {
 @media (prefers-color-scheme: dark) {
   body {
     color: #ccc;
-    background: black;
+    background: #0d1117;
   }
 
   a:link {
